--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -34,7 +34,7 @@
   - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
     - [8.2.1. 硬件性能事件(PMCs)](#821-硬件性能事件pmcs)
     - [8.2.2. 软件性能事件](#822-软件性能事件)
-    - [8.2.3. 内核态Tracingpoint事件](#823-内核态tracingpoint事件)
+    - [8.2.3. 内核态Tracepoint事件](#823-内核态tracepoint事件)
     - [8.2.4. 用户态tracingpoint事件](#824-用户态tracingpoint事件)
     - [8.2.5. 动态追踪](#825-动态追踪)
     - [8.2.6.](#826)
@@ -45,6 +45,8 @@
     - [8.3.3. 其他属性](#833-其他属性)
   - [8.4. 没有预定义字符描述的硬件性能事件](#84-没有预定义字符描述的硬件性能事件)
   - [8.5. 性能事件指定错误](#85-性能事件指定错误)
+- [例子](#例子)
+  - [CPU Statistics: CPU统计](#cpu-statistics-cpu统计)
 - [9. Perf 功能概述](#9-perf-功能概述)
   - [9.1. 全局性概况](#91-全局性概况)
   - [9.2. 全局细节](#92-全局细节)
@@ -716,6 +718,10 @@ man 1 perf-list
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
+一个典型CPU将以下面方式实现PMCs: 在同一时间只能从成千上万的可用PMCs中记录几个. 因为CPU上的硬件资源是固定的(寄存器数量有限), 通过编程这些寄存器对已选的事件进行计数.
+
+使用PMCs的例子, 可以见下面的 `CPU Statistics`
+
 ### 8.2.2. 软件性能事件
 
 - Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
@@ -853,12 +859,16 @@ perf_event_attr:
 
 注意: `{ sample_period, sample_freq }`
 
+Check the rate of events using perf stat first, so that you can estimate the volume of data you'll be capturing. Sampling a subset by default may be a good thing, especially for high frequency events like context switches.
+
+Many other events (like tracepoints) have a default of 1 anyway. You'll encounter a non-1 default for many software and hardware events.
 
 
-
-### 8.2.3. 内核态Tracingpoint事件
+### 8.2.3. 内核态Tracepoint事件
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
+
+这些
 
 由内核中的**ftrace**实现，包括：
 1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
@@ -982,6 +992,10 @@ Run 'perf list' for a list of valid events
 
     -e, --event <event>   event selector. use 'perf list' to list available events
 ```
+
+# 例子
+
+## CPU Statistics: CPU统计
 
 # 9. Perf 功能概述
 
