--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -866,9 +866,11 @@ Many other events (like tracepoints) have a default of 1 anyway. You'll encounte
 
 ### 8.2.3. 内核态Tracepoint事件
 
-- Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
+- Tracepoint Event是内核中**静态tracepoint所触发的事件**，是硬编码进内核中的, 可以用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如system calls、TCP events、file system I/O、disk I/O、slab分配器的分配次数等。
 
-这些
+内核态tracepoints被分组, 比如, "sock:"表明是socket事件, "sched:"表明是CPU调度事件.
+
+kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/events/*.XXX`.
 
 由内核中的**ftrace**实现，包括：
 1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
