--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -34,8 +34,8 @@
   - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
     - [8.2.1. 硬件性能事件(PMCs)](#821-硬件性能事件pmcs)
     - [8.2.2. 软件性能事件](#822-软件性能事件)
-    - [8.2.3. 内核态Tracepoint事件](#823-内核态tracepoint事件)
-    - [8.2.4. 用户态tracingpoint事件](#824-用户态tracingpoint事件)
+    - [8.2.3. 内核态Tracepoints](#823-内核态tracepoints)
+    - [8.2.4. User-Level Statically Defined Tracing (USDT): 用户态tracepoint事件](#824-user-level-statically-defined-tracing-usdt-用户态tracepoint事件)
     - [8.2.5. 动态追踪](#825-动态追踪)
     - [8.2.6.](#826)
     - [8.2.7. 事件限定符](#827-事件限定符)
@@ -47,6 +47,7 @@
   - [8.5. 性能事件指定错误](#85-性能事件指定错误)
 - [例子](#例子)
   - [CPU Statistics: CPU统计](#cpu-statistics-cpu统计)
+  - [Static Kernel Tracing: 静态内核追踪](#static-kernel-tracing-静态内核追踪)
 - [9. Perf 功能概述](#9-perf-功能概述)
   - [9.1. 全局性概况](#91-全局性概况)
   - [9.2. 全局细节](#92-全局细节)
@@ -864,13 +865,66 @@ Check the rate of events using perf stat first, so that you can estimate the vol
 Many other events (like tracepoints) have a default of 1 anyway. You'll encounter a non-1 default for many software and hardware events.
 
 
-### 8.2.3. 内核态Tracepoint事件
+### 8.2.3. 内核态Tracepoints
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，是硬编码进内核中的, 可以用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如system calls、TCP events、file system I/O、disk I/O、slab分配器的分配次数等。
 
 内核态tracepoints被分组, 比如, "sock:"表明是socket事件, "sched:"表明是CPU调度事件.
 
+tracepoints有个关键的点事要有稳定的API(事件名字和参数), 当写代码能使用它们, 并且在后续的版本中持续支持.
+
 kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/events/*.XXX`.
+
+查看内核中分组的名字和数量:
+
+```
+# ./perf list | awk -F: '/Tracepoint event/ { lib[$1]++ } END {
+>     for (l in lib) { printf "  %-16.16s %d\n", l, lib[l] } }' | sort | column
+    alarmtimer     4	    kmem           13	    raw_syscalls   2
+    block          18	    kvm            76	    rcu            1
+    bridge         4	    kvmmmu         16	    rpcgss         21
+    cgroup         13	    kyber          3	    rpm            5
+    clk            16	    libata         6	    rseq           2
+    compaction     14	    mce            1	    rtc            12
+    context_tracki 2	    mdio           1	    sched          24
+    cpuhp          3	    migrate        1	    scsi           5
+    devfreq        1	    mlx5           9	    signal         2
+    devlink        5	    mmap           1	    skb            3
+    dma_fence      7	    module         5	    sock           3
+    exceptions     2	    msr            3	    sunrpc         109
+    ext4           105	    napi           1	    swiotlb        1
+    fib            1	    nbd            5	    syscalls       662
+    fib6           1	    neigh          7	    task           2
+    filelock       12	    net            18	    tcp            7
+    filemap        4	    nfsd           64	    thermal        3
+    ftrace         2	    nmi            1	    timer          13
+    huge_memory    4	    nvme           4	    tlb            1
+    hwmon          3	    oom            8	    udp            1
+    initcall       3	    page_isolation 1	    ufs            13
+    intel_iommu    7	    page_pool      4	    vmscan         18
+    io_uring       14	    pagemap        2	    vsyscall       1
+    iomap          8	    percpu         5	    workqueue      4
+    iommu          7	    power          22	    writeback      34
+    irq            5	    printk         1	    x86_fpu        11
+    irq_matrix     12	    qdisc          4	    xdp            12
+    irq_vectors    34	    qla            1	    xhci-hcd       53
+    iscsi          7	    random         15
+    jbd2           17	    ras            5
+```
+
+这些包括:
+
+* block: block device I/O
+* ext4: file system operations
+* kmem: kernel memory allocation events
+* random: kernel random number generator events
+* sched: CPU scheduler events
+* syscalls: system call enter and exits
+* task: task events
+
+关于使用这些tracepoints的例子, 见下面的`Static Kernel Tracing` 静态内核Tracing
+
+
 
 由内核中的**ftrace**实现，包括：
 1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
@@ -881,9 +935,13 @@ kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/ev
 4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
   - perf record -F XXXHz
 
-### 8.2.4. 用户态tracingpoint事件
 
-用户态有一些静态tracepoint事件
+
+### 8.2.4. User-Level Statically Defined Tracing (USDT): 用户态tracepoint事件
+
+和kernel tracepoints类似, USDT是在用户态应用中硬编码的, 对外表现就是稳定的API(事件名字和参数).
+
+目前, 很多应用程序已经开始包含了tracepoints, 用来支持DTrace.
 
 ### 8.2.5. 动态追踪
 
@@ -998,6 +1056,10 @@ Run 'perf list' for a list of valid events
 # 例子
 
 ## CPU Statistics: CPU统计
+
+## Static Kernel Tracing: 静态内核追踪
+
+
 
 # 9. Perf 功能概述
 
