--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -56,6 +56,7 @@
   - [9.8. eBPF](#98-ebpf)
 - [Visualizations: 可视化](#visualizations-可视化)
   - [Flame Graphs: 火焰图](#flame-graphs-火焰图)
+    - [示例](#示例)
 - [10. Perf 功能概述](#10-perf-功能概述)
   - [10.1. 全局性概况](#101-全局性概况)
   - [10.2. 全局细节](#102-全局细节)
@@ -1116,7 +1117,18 @@ perf内置了一个可视化: timecharts, 以及通过文本用户界面(TUI)和
 
 火焰图: http://www.brendangregg.com/flamegraphs.html
 
-使用[火焰图工具](https://github.com/brendangregg/FlameGraph)分析perf的剖析数据生成. 火焰图会`perf report
+使用[火焰图工具](https://github.com/brendangregg/FlameGraph)分析perf的剖析数据生成. 火焰图和`perf report`使用的数据一样, 都是通过`stack traces(-g)`获取的perf.data文件.
+
+### 示例
+
+下面火焰图显示`3.2.9-1`内核的network workload, 运行了一个KVM实例:
+
+![http://www.brendangregg.com/FlameGraphs/cpu-linux-tcpsend.svg](http://www.brendangregg.com/FlameGraphs/cpu-linux-tcpsend.svg)
+
+火焰图在x轴显示采样数量总体, y轴显示堆栈深度. 每个函数(stack frame)被绘制成一个矩形, 矩形的宽度与它的采样数量相关. 完整描述见 [CPU火焰图 ](http://www.brendangregg.com/FlameGraphs/cpuflamegraphs) .
+
+可以使用鼠标探索内核CPU时间花在哪里，快速量化代码路径，并确定性能调优工作最好花在哪里。这个示例显示，大部分时间都花在`vp_notify()`代码路径上，所有cpu上的示例中有`70.52%`的时间执行`iowrite16()`，它是由**KVM管理程序处理**的。这些信息对于指导KVM性能工作非常有用。
+
 
 # 10. Perf 功能概述
 
