--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -57,6 +57,7 @@
 - [Visualizations: 可视化](#visualizations-可视化)
   - [Flame Graphs: 火焰图](#flame-graphs-火焰图)
     - [示例](#示例)
+    - [生成](#生成)
 - [10. Perf 功能概述](#10-perf-功能概述)
   - [10.1. 全局性概况](#101-全局性概况)
   - [10.2. 全局细节](#102-全局细节)
@@ -482,10 +483,10 @@ perf top -e raw_syscalls:sys_enter -ns comm
 stdbuf -oL perf top -e net:net_dev_xmit -ns comm | strings
 
 # Sample stacks at 99 Hertz, and, context switches:
-perf record -F99 -e cpu-clock -e cs -a -g 
+perf record -F 99 -e cpu-clock -e cs -a -g 
 
 # Sample stacks to 2 levels deep, and, context switch stacks to 5 levels (needs 4.8):
-perf record -F99 -e cpu-clock/max-stack=2/ -e cs/max-stack=5/ -a -g 
+perf record -F 99 -e cpu-clock/max-stack=2/ -e cs/max-stack=5/ -a -g 
 ```
 
 ## 4.8. Special: 特定
@@ -1128,6 +1129,24 @@ perf内置了一个可视化: timecharts, 以及通过文本用户界面(TUI)和
 火焰图在x轴显示采样数量总体, y轴显示堆栈深度. 每个函数(stack frame)被绘制成一个矩形, 矩形的宽度与它的采样数量相关. 完整描述见 [CPU火焰图 ](http://www.brendangregg.com/FlameGraphs/cpuflamegraphs) .
 
 可以使用鼠标探索内核CPU时间花在哪里，快速量化代码路径，并确定性能调优工作最好花在哪里。这个示例显示，大部分时间都花在`vp_notify()`代码路径上，所有cpu上的示例中有`70.52%`的时间执行`iowrite16()`，它是由**KVM管理程序处理**的。这些信息对于指导KVM性能工作非常有用。
+
+裸机Linux(bare metal Linux)的network workload看起来是不同的, 因为首先网络的处理不是通过`virtio-net`驱动处理.
+
+### 生成
+
+火焰图生成
+
+```
+# git clone https://github.com/brendangregg/FlameGraph  # or download it from github
+# cd FlameGraph
+# perf record -F 99 -ag -- sleep 60
+# perf script | ./stackcollapse-perf.pl > out.perf-folded
+# cat out.perf-folded | ./flamegraph.pl > perf-kernel.svg
+```
+
+`perf record`会生成perf.data文件, 可以使用`perf report`查看
+
+
 
 
 # 10. Perf 功能概述
