--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/4. kvmclock时钟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/4. kvmclock时钟.md
@@ -30,6 +30,8 @@
 
 # 1. 时钟实现概述
 
+no-kvmclock     `[X86,KVM] Disable paravirtualized KVM clock driver`
+
 ## 1.1. 时钟中断计数
 
 时间的一种保持方式是通过**时钟中断计数**，进而换算得到，这种方式在**虚拟机**里有问题，因为有时**运行vpcu的cpu被调度**出来使时钟**中断不能准时**到达guest os。
