--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
+++ b/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
@@ -76,7 +76,7 @@
 git clone https://github.com/brendangregg/FlameGraph.git
 ```
 
-生成和创建火焰图需要如下几个步骤
+生成和创建火焰图需要如下**几个步骤**
 
 | 流程 | 描述 | 脚本 |
 |:---:|:---:|:----:|
