--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -37,14 +37,6 @@
     - [8.2.3. Kernel Tracepoints: 内核态Tracepoints](#823-kernel-tracepoints-内核态tracepoints)
     - [8.2.4. User-Level Statically Defined Tracing (USDT): 用户态tracepoint](#824-user-level-statically-defined-tracing-usdt-用户态tracepoint)
     - [8.2.5. Dynamic Tracing: 动态追踪](#825-dynamic-tracing-动态追踪)
-    - [8.2.6.](#826)
-    - [8.2.7. 事件限定符](#827-事件限定符)
-  - [8.3. 性能事件的属性](#83-性能事件的属性)
-    - [8.3.1. PMI中断和PEBS中断](#831-pmi中断和pebs中断)
-    - [8.3.2. 性能事件的精度级别](#832-性能事件的精度级别)
-    - [8.3.3. 其他属性](#833-其他属性)
-  - [8.4. 没有预定义字符描述的硬件性能事件](#84-没有预定义字符描述的硬件性能事件)
-  - [8.5. 性能事件指定错误](#85-性能事件指定错误)
 - [9. 例子](#9-例子)
   - [9.1. CPU Statistics: CPU统计](#91-cpu-statistics-cpu统计)
   - [9.2. Timed Profiling:](#92-timed-profiling)
@@ -54,6 +46,14 @@
   - [9.6. Dynamic Tracing](#96-dynamic-tracing)
   - [9.7. Scheduler Analysis](#97-scheduler-analysis)
   - [9.8. eBPF](#98-ebpf)
+    - [8.2.6.](#826)
+    - [8.2.7. 事件限定符](#827-事件限定符)
+  - [8.3. 性能事件的属性](#83-性能事件的属性)
+    - [8.3.1. PMI中断和PEBS中断](#831-pmi中断和pebs中断)
+    - [8.3.2. 性能事件的精度级别](#832-性能事件的精度级别)
+    - [8.3.3. 其他属性](#833-其他属性)
+  - [8.4. 没有预定义字符描述的硬件性能事件](#84-没有预定义字符描述的硬件性能事件)
+  - [8.5. 性能事件指定错误](#85-性能事件指定错误)
 - [10. Visualizations: 可视化](#10-visualizations-可视化)
   - [10.1. Flame Graphs: 火焰图](#101-flame-graphs-火焰图)
     - [10.1.1. 示例](#1011-示例)
@@ -983,23 +983,41 @@ One benefit of dynamic tracing is that it can be enabled on a live system withou
 The overhead while dynamic tracing is in use, and extra instructions are being executed, is relative to the frequency of instrumented events multiplied by the work done on each instrumentation.
 
 
-虽然动态跟踪可以看到所有东西，但它也是一个不稳定的接口，因为它**检测原始代码**。这意味着在内核补丁或更新之后，您开发的任何动态跟踪工具都可能崩溃。首先尝试使用静态跟踪点，因为它们的接口应该更加稳定。它们也更容易使用和理解，因为在设计时考虑了跟踪最终用户。
+虽然动态跟踪可以看到**所有东西**，但它也是一个不稳定的接口，因为它**检测原始代码**。这意味着在**内核补丁**或**更新**之后，您开发的任何**动态跟踪工具**都**可能崩溃**。**首先**尝试使用**静态跟踪点**，因为它们的接口应该更加稳定。它们也更容易使用和理解，因为在设计时考虑了跟踪最终用户。
 
 动态跟踪的一个好处是可以在活动的系统上启用它，而不需要重新启动任何东西。您可以使用一个已经运行的内核或应用程序，然后开始动态插装，这将(安全地)对内存中的指令进行补丁，以添加插装。这意味着在您开始使用该特性之前，它没有任何开销或税收。前一刻二进制文件还在全速运行，而下一刻，它又在运行一些您动态添加的额外插装指令。一旦您完成了动态跟踪会话的使用，这些指令最终应该被删除。
 
 使用动态跟踪和执行额外指令时的开销相对于检测事件的频率乘以在每个检测上完成的工作。
 
 
-
-http://www.brendangregg.com/perf.html#DynamicTracing
-
-
+使用动态追踪的例子, 见`Dynamic Tracing`
 
 
 
 要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
 
 要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
+
+
+# 9. 例子
+
+## 9.1. CPU Statistics: CPU统计
+
+`perf stat`命令工具
+
+## 9.2. Timed Profiling:
+
+## 9.3. Event Profiling:
+
+## 9.4. Static Kernel Tracing: 静态内核态追踪
+
+## 9.5. Static User Tracing: 静态用户态追踪
+
+## 9.6. Dynamic Tracing
+
+## 9.7. Scheduler Analysis
+
+## 9.8. eBPF
 
 ### 8.2.6. 
 
@@ -1104,24 +1122,6 @@ Run 'perf list' for a list of valid events
 
     -e, --event <event>   event selector. use 'perf list' to list available events
 ```
-
-# 9. 例子
-
-## 9.1. CPU Statistics: CPU统计
-
-## 9.2. Timed Profiling:
-
-## 9.3. Event Profiling:
-
-## 9.4. Static Kernel Tracing: 静态内核态追踪
-
-## 9.5. Static User Tracing: 静态用户态追踪
-
-## 9.6. Dynamic Tracing
-
-## 9.7. Scheduler Analysis
-
-## 9.8. eBPF
 
 # 10. Visualizations: 可视化
 
