--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -39,6 +39,8 @@
     - [8.2.5. Dynamic Tracing: 动态追踪](#825-dynamic-tracing-动态追踪)
 - [9. 例子](#9-例子)
   - [9.1. CPU Statistics: CPU统计](#91-cpu-statistics-cpu统计)
+    - [CPU 微架构](#cpu-微架构)
+    - [Detailed Mode](#detailed-mode)
   - [9.2. Timed Profiling:](#92-timed-profiling)
   - [9.3. Event Profiling:](#93-event-profiling)
   - [9.4. Static Kernel Tracing: 静态内核态追踪](#94-static-kernel-tracing-静态内核态追踪)
@@ -1003,7 +1005,39 @@ The overhead while dynamic tracing is in use, and extra instructions are being e
 
 ## 9.1. CPU Statistics: CPU统计
 
-`perf stat`命令工具
+`perf stat`命令汇总了CPU事件(PMCs).
+
+
+### CPU 微架构
+
+### Detailed Mode
+
+`perf stat`有一个Detailed Mode, 通过`-d`选项:
+
+```
+# perf stat -d gzip file1
+
+ Performance counter stats for 'gzip file1':
+
+       1610.719530 task-clock                #    0.998 CPUs utilized          
+                20 context-switches          #    0.012 K/sec                  
+                 0 CPU-migrations            #    0.000 K/sec                  
+               258 page-faults               #    0.160 K/sec                  
+     5,491,605,997 cycles                    #    3.409 GHz                     [40.18%]
+     1,654,551,151 stalled-cycles-frontend   #   30.13% frontend cycles idle    [40.80%]
+     1,025,280,350 stalled-cycles-backend    #   18.67% backend  cycles idle    [40.34%]
+     8,644,643,951 instructions              #    1.57  insns per cycle        
+                                             #    0.19  stalled cycles per insn [50.89%]
+     1,492,911,665 branches                  #  926.860 M/sec                   [50.69%]
+        53,471,580 branch-misses             #    3.58% of all branches         [51.21%]
+     1,938,889,736 L1-dcache-loads           # 1203.741 M/sec                   [49.68%]
+       154,380,395 L1-dcache-load-misses     #    7.96% of all L1-dcache hits   [49.66%]
+                 0 LLC-loads                 #    0.000 K/sec                   [39.27%]
+                 0 LLC-load-misses           #    0.00% of all LL-cache hits    [39.61%]
+
+       1.614165346 seconds time elapsed
+```
+
 
 ## 9.2. Timed Profiling:
 
