--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -44,11 +44,9 @@
 
 对于一个**指定的性能事件**(默认是CPU周期)，动态显示**消耗最多**的**函数**或**指令**。
 
-动态显示执行成本最高的项。
+跟踪时可以**指定事件**，**CPU**，以及**是否跟踪stack trace**。
 
-默认情况下以cycles事件采样，样本最高的输出在最顶部。
-
-跟踪时可以指定事件，CPU，以及是否跟踪stack trace。perf top主要用于实时分析各个函数在某个性能事件上的热度，能够快速的定位热点函数，包括应用程序函数、模块函数与内核函数，甚至能够定位到热点指令。默认的性能事件为cpu cycles。
+perf top主要用于**实时分析**各个**函数**在**某个性能事件**上的热度，能够快速的定位热点函数，包括**应用程序函数**、**模块函数**与**内核函数**，甚至能够定位到**热点指令**。**默认**的**性能事件**为`cpu cycles`。
 
 利用perf top，能够直观地观察到当前的热点函数，并利用工具中内置的annotate功能，进一步查找特点指令。
 
@@ -68,7 +66,7 @@ perf top的基本使用方法为：
 perf top [-e <EVENT> | --event=EVENT] [<options>]
 ```
 
-该命令以**默认性能事件**"cycles（CPU周期数）"进行全系统的性能剖析，检测系统中的所有应用程序函数与内核函数的热度。
+该命令以**默认性能事件**"cycles（CPU周期数）"进行全系统的性能剖析，检测系统中的所有**应用程序函数**与**内核函数**的热度。
 
 # 3. 3种用户页面
 
