--- Auto-Git Commit ---

--- a/Virtualization/KVM/1. 原理概述/2. KVM源码结构.md
+++ b/Virtualization/KVM/1. 原理概述/2. KVM源码结构.md
@@ -6,7 +6,7 @@
 - [2. Linux 内核源码中的 KVM](#2-linux-内核源码中的-kvm)
   - [2.1. virt/kvm 目录](#21-virtkvm-目录)
   - [2.2. arch/x86/kvm 目录](#22-archx86kvm-目录)
-  - [2.3. arch/*/include/asm/kvm*](#23-archincludeasmkvm)
+  - [2.3. `arch/*/include/asm/kvm*`](#23-archincludeasmkvm)
   - [2.4. include/linux 目录](#24-includelinux-目录)
   - [2.5. include/asm-x86 目录](#25-includeasm-x86-目录)
   - [2.6. include/trace/events/kvm.h](#26-includetraceeventskvmh)
@@ -130,7 +130,7 @@ drwxr-xr-x 4  501   80    198 Nov 27 09:06 arm
 
 该目录是 KVM 的**主要文件目录**，除了包含 **x86 架构** KVM 所需要的**头文件、代码**之外，还包括适用于**Intel的模块文件(vmx.c**)和**AMD芯片的模块文件(svm.c**)。
 
-## 2.3. arch/*/include/asm/kvm*
+## 2.3. `arch/*/include/asm/kvm*`
 
 相关头文件
 
