--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/3. KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -405,7 +405,7 @@ struct kvm_lapic_irq {
 
 `kvm_lapic_irq`结构体是中断经过**IOAPIC**的**PRT**格式化出来的**中断消息**，从IOAPIC**发送给LAPIC**。
 
-LAPIC在GUEST运行之前会对IRR中的进行选举，找到最高优先级的中断，该中断会被记录在`kvm_queued_interrupt`结构体中并且pending成员设置为true；nr成员记录了该中断的中断向量号，soft说明是否是硬中断。如果该中断大于PPR，就进行注入。如果注入成功，在虚拟机退出的时候，将pending设置为false，这个结构体保存着`kvm.vcpus[i].arch.interrupt`中。如果注入不成功，会在再次进入虚拟机的时候再次进行注入。
+LAPIC在GUEST运行之前会对IRR中的进行选举，找到最高优先级的中断，该中断会被记录在`kvm_queued_interrupt`结构体中并且**pending成员**设置为`true`；nr成员记录了该中断的中断向量号，soft说明是否是硬中断。如果该中断大于PPR，就进行注入。如果注入成功，在虚拟机退出的时候，将pending设置为false，这个结构体保存着`kvm.vcpus[i].arch.interrupt`中。如果注入不成功，会在再次进入虚拟机的时候再次进行注入。
 
 为了加速对于目标VCPU的查找，在`kvm.arch.apic_map`中保存了kvm_apic_map结构体。phys_map成员和logical_map成员记录了RTE的destination filed同VLAPIC结构体的对应的关系，分别对应physical mode和logic mode。在发送中断的时候，如果有该map表，且中断不是lowest priority和广播，则通过RTE的destination filed就可以直接找到目标VCPU，进行快速的分发。否则需要遍历所有的VCPU，逐一的和RTE的destination filed进行匹配。
 
