--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -222,7 +222,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit->mask_notifier.func = pit_mask_notifer;
         // 重置pit, 这里面不会启用hrtimer
         kvm_pit_reset(pit);
-
+        // 设置重新注入
         kvm_pit_set_reinject(pit, true);
 
         mutex_lock(&kvm->slots_lock);
@@ -412,7 +412,9 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 ```cpp
 static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
 {
+        // 设置pengding为0
         atomic_set(&pit->pit_state.pending, 0);
+        // 设置irq ack为1
         atomic_set(&pit->pit_state.irq_ack, 1);
 }
 ```
@@ -762,7 +764,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 }
 ```
 
-将超时work(`&pt->expired`)添加到工作线程(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+将**超时work**(`&pt->expired`)添加到**工作线程**(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
 如果**定时器周期触发**，则**再次启动定时器**，否则销毁, 详细看hrtimer的机制
 
