--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -26,7 +26,7 @@
 - [7. pit_timer_fn(): 定时器中断函数](#7-pit_timer_fn-定时器中断函数)
   - [7.1. pit_do_work(): 时钟中断注入](#71-pit_do_work-时钟中断注入)
   - [7.2. pit的 kvm_set_irq: 触发中断](#72-pit的-kvm_set_irq-触发中断)
-  - [7.3. 定时器的中断ack](#73-定时器的中断ack)
+  - [7.3. kvm_pit_ack_irq: 定时器的中断ack](#73-kvm_pit_ack_irq-定时器的中断ack)
 
 <!-- /code_chunk_output -->
 
@@ -748,7 +748,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
         struct kvm_pit *pt = pit_state_to_pit(ps);
         //如果时钟中断需要重新注入，就直接累加
         if (atomic_read(&ps->reinject))
-                // 累加中断
+                // 时钟中断pending累加
                 atomic_inc(&ps->pending);
         // 将这个工作(work)挂载到worker(内核线程)的工作列表(work->list)
         // 让worker(pt->worker, 内核线程)开始工作(pt->expired)
@@ -764,13 +764,13 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 }
 ```
 
-将**超时work**(`&pt->expired`)添加到**工作线程**(`pt->worker`), 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+将**超时work**(`&pt->expired`)添加到**工作线程**(`pt->worker`)的工作队列, 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
 如果**定时器周期触发**，则**再次启动定时器**，否则销毁, 详细看hrtimer的机制
 
-## 7.1. pit_do_work(): 时钟中断注入
+当定时器将**时钟中断pending增加**，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
 
-当定时器将时钟中断pending增加，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
+## 7.1. pit_do_work(): 时钟中断注入
 
 ```cpp
 static void pit_do_work(struct kthread_work *work)
@@ -843,7 +843,7 @@ static const struct kvm_irq_routing_entry default_routing[] = {
 
 
 
-## 7.3. 定时器的中断ack
+## 7.3. kvm_pit_ack_irq: 定时器的中断ack
 
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
