--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -9,11 +9,11 @@
 - [4. 利用sshfs自动读取guest的kallsyms和modules文件](#4-利用sshfs自动读取guest的kallsyms和modules文件)
 - [5. 记录guest的性能事件](#5-记录guest的性能事件)
 - [6. 分析guest上的性能事件](#6-分析guest上的性能事件)
-- [perf kvm stat record/report 使用](#perf-kvm-stat-recordreport-使用)
-- [相关资料](#相关资料)
-- [例子](#例子)
-  - [背景](#背景)
-- [问题](#问题)
+- [7. perf kvm stat record/report 使用](#7-perf-kvm-stat-recordreport-使用)
+- [8. 相关资料](#8-相关资料)
+- [9. 例子](#9-例子)
+  - [9.1. 背景](#91-背景)
+- [10. 问题](#10-问题)
 
 <!-- /code_chunk_output -->
 
@@ -159,7 +159,7 @@ perf kvm --host --guest --guestmodules=guest-modules report -i perf.data.kvm --f
 通过上面的介绍，我们可以看到，利用perf kvm子工具，我们可以方便的在host中监测guest中的性能事件，这对于我们分析guest的性能是非常方便的。Perf kvm子工具还支持其它的perf的命令，比如：stat等。
 
 
-# perf kvm stat record/report 使用
+# 7. perf kvm stat record/report 使用
 
 1. 
 
@@ -193,7 +193,7 @@ tools/perf/Documentation/
 ./perf kvm stat report --event=vmexit --vcpu=0 --key=time
 
 
-# 相关资料
+# 8. 相关资料
 
 https://lwn.net/Articles/513317/
 
@@ -203,13 +203,13 @@ https://blog.csdn.net/x_i_y_u_e/article/details/48466031
 
 
 
-# 例子
+# 9. 例子
 
 1. https://lwn.net/Articles/513317/
 
 2. XXX
 
-## 背景
+## 9.1. 背景
 
 benchmark或业务性能较差
 
@@ -325,7 +325,7 @@ benchmark: {'838': 19686, '80b': 9, '830': 11176}
 
 
 
-# 问题
+# 10. 问题
 
 1. ./perf kvm stat record -a -p XXX sleep 10
 
