--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
@@ -22,3 +22,15 @@ VMCS 的 VM-exit 信息类字段用来保存发生 **VM-exit 事件**的**原因
 (2) exit qualification 字段, 属于 natural-width 类型字段, 提供导致 VM-exit 的某些事件的明细信息. 
 
 (3) 
+
+## Exit reason 字段
+
+## VM-exit 原因
+
+当前VMX架构一共有57个退出原因码, 如表3-24所示.
+
+![2020-07-28-16-00-51.png](./images/2020-07-28-16-00-51.png)
+
+![2020-07-28-16-01-21.png](./images/2020-07-28-16-01-21.png)
+
+
