--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段.md
@@ -27,6 +27,8 @@ VMCS 的 VM-exit 信息类字段用来保存发生 **VM-exit 事件**的**原因
 
 ## VM-exit 原因
 
+详细见Intel手册 `APPENDIX C VMX BASIC EXIT REASONS`
+
 当前VMX架构一共有57个退出原因码, 如表3-24所示.
 
 ![2020-07-28-16-00-51.png](./images/2020-07-28-16-00-51.png)
