--- a/Vim/0. Tips.md
+++ b/Vim/0. Tips.md
@@ -24,6 +24,7 @@
     - [5.1.3. 方法三：插件mark.vim](#513-方法三插件markvim)
 - [6. 文件目录查找字符串](#6-文件目录查找字符串)
 - [7. 乱码](#7-乱码)
+- [大小写转换](#大小写转换)
 
 <!-- /code_chunk_output -->
 
@@ -282,3 +283,6 @@ source $VIMRUNTIME/menu.vim
 "解决consle输出乱码
 language messages zh_CN.utf-8
 ```
+
+# 大小写转换
+
