--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -636,6 +636,8 @@ centos你可以使用yum安装，也可以使用源码安装。
 
 perf 在内核源码包中的位置 tools/perf。
 
+Acme是Linux perf的maintainer，他的`perf/core`分支包含了perf工具的最新功能。所以如果想体验最新版本的perf，可以下载和编译Acme的perf：
+
 ## 7.1. 安装依赖库
 
 安装依赖库，有一个小窍门可以找到依赖的库
