--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -202,6 +202,8 @@ https://www.linux-kvm.org/page/Perf_events
 https://blog.csdn.net/x_i_y_u_e/article/details/48466031
 
 
+头文件在`tools/arch/x86/include/uapi/asm/svm.h`和`arch/x86/include/uapi/asm/svm.h`, 两个是一样的.
+
 
 # 9. 例子
 
