--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -94,6 +94,10 @@ systemctl enable httpd
 wget http://XXXXX/t
 ```
 
-5. 可以使用minicom??
+5. 可以使用minicom或者kermit??
 
 https://www.jianshu.com/p/d07aaea2e16f
+
+https://blog.csdn.net/hh_h_hhh_d/article/details/79206133
+
+https://blog.csdn.net/xian_2015/article/details/49443483
