--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -101,3 +101,8 @@ https://www.jianshu.com/p/d07aaea2e16f
 https://blog.csdn.net/hh_h_hhh_d/article/details/79206133
 
 https://blog.csdn.net/xian_2015/article/details/49443483
+
+在使用minicom查看log时候，今天发现无法回车进入到命令行模式输入命令了，通过查找资料发现关键点就在串口的配置中有个Serial port setup-->Hardware Flow Contorl选项被改成了Yes，这样就造成了键盘没有用了，接受不了任何输入。把他改成No就好了。具体修改操作如下：allen@allen-ubuntu:~$ sudo minicom /dev/ttyUSB0 （修改后保存权限问题，需要使用root权限）
+
+进入minicom后Ctrl+A然后按字母键O进入configure Minicom界面，进入Serial port setup界面，此时F - Hardware Flow Contorl项为Yes，按下F键就修改为No了，即关闭硬件流控，回车回到上级菜单，选择Save setup as _dev_ttyUSB0保存配置修改。这样就可以输入命令了。
+
