--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -845,6 +845,8 @@ static const struct kvm_irq_routing_entry default_routing[] = {
 
 ## 7.3. kvm_pit_ack_irq: 定时器的中断ack
 
+用于EOI通知到i8254
+
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
 ```cpp
