--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
@@ -41,10 +41,22 @@
 
 通过上面了解知道两者区别了**APIC Timer**的是**每个cpu**内核都有**一个定时器**，而**PIT是共用的一个**。
 
-APIC Timer的模式APIC定时器包含**3种定时器模式**，
+以前提到, APIC Timer的模式APIC定时器包含**3种定时器模式**，
 - 周期触发`periodic`
 - 一次性触发`one-shot`
 - `TSC-Deadline`模式(最新的CPU里面支持)。
+
+查看操作系统的clocksource：
+
+在`/sys/devices/system/clocksource/clocksource0`目录下；
+
+- `available_clocksource`是当前**所有可用**的clocksource；
+
+- `current_clocksource`是当前**正在使用**的clocksource。
+
+clocksource management：
+
+主要逻辑代码在`kernel/time/clocksource.c`中实现
 
 # 3. 虚拟化时钟
 
@@ -89,7 +101,7 @@ Preemption Timer是一种可以**周期性**使**VM触发VMEXIT**的一种机制
 使用Preemption Timer时需要注意下面两个问题：
 在旧版本的Intel CPU中Preemption Timer是不精确的。在Intel的设计中，**Preemption Timer**应该是严格**和TSC保持一致**，但是在Haswell之前的处理器并不能严格保持一致。
 
-Preemption Timer只有在VCPU进入到Guest时（即进入`non-root` mode）才会开始工作，在**VCPU**进入**VMM**时或者**VCPU被调度出CPU**时，其值都不会有变化。
+Preemption Timer只有在VCPU进入到Guest时（即进入`non-root` mode）才会开始工作，在**VCPU**进入**VMM**时或者**VCPU被调度出CPU**时，其**值都不会有变化！！！**。
 
 ```
 cat /sys/module/kvm_intel/parameters/preemption_timer
