--- Auto-Git Commit ---

--- a/Hided/Git/1. git bisect.md
+++ b/Hided/Git/1. git bisect.md
@@ -43,4 +43,9 @@ git bisect good
 
 既然第51次提交没有问题，就意味着错误是在代码历史的后半段引入的。执行上面的命令，Git 就自动切换到后半段的中点（第76次提交）。
 
-验证可用性, 发现可以不能正常递增。
+验证可用性, 发现可以不能正常递增。使用git bisect bad命令，标识本次提交（第76）有问题。
+
+```
+git bisect bad
+```
+
