--- a/Hided/Git/1. git bisect.md
+++ b/Hided/Git/1. git bisect.md
@@ -1,15 +1,26 @@
 
-# 作用
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 作用](#1-作用)
+- [2. 原理](#2-原理)
+- [3. 操作](#3-操作)
+- [4. 参考](#4-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 作用
 
 git bisect是一个很有用的命令，用来查找哪一次代码提交引入了错误。
 
-# 原理
+# 2. 原理
 
 ![2020-07-31-13-26-10.png](./images/2020-07-31-13-26-10.png)
 
 它的原理很简单，就是将代码提交的历史，按照两分法不断缩小定位。所谓"两分法"，就是将代码历史一分为二，确定问题出在前半部分，还是后半部分，不断执行这个过程，直到范围缩小到某一次代码提交。
 
-# 操作
+# 3. 操作
 
 首先，检查一下代码提交历史。
 
@@ -49,3 +60,24 @@ git bisect good
 git bisect bad
 ```
 
+执行上面的命令以后，Git 就自动切换到第51次到第76次的中点（第63次提交）。
+
+接下来，不断重复这个过程，直到成功找到出问题的那一次提交为止。这时，Git 会给出如下的提示。
+
+```
+b47892 is the first bad commit
+```
+
+既然找到那个有问题的提交，就可以检查代码，确定具体是什么错误。
+
+然后，使用`git bisect reset`命令，**退出查错**，回到最近一次的代码提交。
+
+```
+git bisect reset
+```
+
+现在就可以开始修复错误了。
+
+# 4. 参考
+
+http://www.ruanyifeng.com/blog/2018/12/git-bisect.html
