--- Auto-Git Commit ---

--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -6,15 +6,15 @@
 
 ## merge
 
-![config](images/3.gif)
-
-
 git merge是用来合并两个分支的。
 
 ```
-# 将b分支合并到当前分支
-git merge b
+# 将feature分支合并到当前分支
+git merge feature
 ```
+
+![config](images/3.gif)
+
 
 同样 git rebase b，也是把 b分支合并到当前分支
 
