--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -2,9 +2,9 @@
 
 # 作用
 
-将feature分支合并到master分支的基础案例。
+将feature分支合并到master分支。
 
-## merge
+# 操作
 
 git merge是用来合并两个分支的。
 
@@ -16,7 +16,9 @@ git merge feature
 ![config](images/3.gif)
 
 
-同样 git rebase b，也是把 b分支合并到当前分支
+同样 `git rebase feature`，也是把 feature 分支**合并到当前分支**
+
+# 原理
 
 他们的 原理 如下：
 
@@ -44,22 +46,26 @@ $ git commit
 
 ![config](images/8.png)
 
-在这里，你可以用"pull"命令把"origin"分支上的修改拉下来并且和你的修改合并； 结果看起来就像一个新的"合并的提交"(merge commit):
+## merge
+
+在这里，你可以用"**pull**"命令把"**origin**"分支上的**修改**拉下来并且和你的修改**合并**；结果看起来就像一个**新**的"**合并的提交**"(merge commit):
 
 ![config](images/9.png)
 
-但是，如果你想让"mywork"分支历史看起来像没有经过任何合并一样，你也许可以用 git rebase:
+## rebase
+
+但是，如果你想让"mywork"分支历史看起来**像没有经过任何合并**一样，你也许可以用 git rebase:
 
 ```
 $ git checkout mywork
 $ git rebase origin
 ```
 
-这些命令会把你的"mywork"分支里的每个提交(commit)取消掉，并且把它们临时 保存为补丁(patch)(这些补丁放到".git/rebase"目录中),然后把"mywork"分支更新 为最新的"origin"分支，最后把保存的这些补丁应用到"mywork"分支上。
+这些命令会把你的"**mywork**"分支里的**每个提交**(commit)**取消**掉，并且把它们**临时保存**为补丁(**patch**)(这些补丁放到"`.git/rebase`"目录中), 然后把"**mywork**"分支**更新**为最新的"origin"分支，最后把**保存的这些补丁应用**到"mywork"分支上。
 
 ![config](images/10.png)
 
-当'mywork'分支更新之后，它会指向这些新创建的提交(commit),而那些老的提交会被丢弃。 如果运行垃圾收集命令(pruning garbage collection), 这些被丢弃的提交就会删除. （请查看 git gc)
+当'mywork'分支更新之后，它会指向这些**新创建的提交**(commit),而那些**老的提交**会**被丢弃**。 如果运行垃圾收集命令(pruning garbage collection), 这些被丢弃的提交就会删除. （请查看 git gc)
 
 ![config](images/11.png)
 
