--- Auto-Git Commit ---

--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -69,22 +69,25 @@ $ git rebase origin
 
 ![config](images/11.png)
 
-## 二、解决冲突
+### 解决冲突
 
-在rebase的过程中，也许会出现冲突(conflict). 在这种情况，Git会停止rebase并会让你去解决 冲突；在解决完冲突后，用"git-add"命令去更新这些内容的索引(index), 然后，你无需执行 git-commit,只要执行:
+在rebase的过程中，也许会出现**冲突**(conflict). 
+
+在这种情况，Git会**停止rebase**并会让你去解决冲突；在解决完冲突后，用"`git add`"命令去**更新这些内容的索引**(index), 然后，你**无需执行** `git commit`,只要执行:
 
 ```
 $ git rebase --continue
 ```
 
 这样git会继续应用(apply)余下的补丁。
-在任何时候，你可以用--abort参数来终止rebase的行动，并且"mywork" 分支会回到rebase开始前的状态。
+
+在任何时候，你可以用`--abort`参数来**终止rebase的行动**，并且"mywork" 分支会回到**rebase开始前的状态**。
 
 ```
 $ git rebase --abort
 ```
 
-## 三、git rebase和git merge的区别
+# git rebase和git merge的区别
 
 现在我们可以看一下用合并(merge)和用rebase所产生的历史的区别：
 
@@ -92,10 +95,14 @@ $ git rebase --abort
 
 当我们使用Git log来参看commit时，其commit的顺序也有所不同。
 
-假设C3提交于9:00AM,C5提交于10:00AM,C4提交于11:00AM，C6提交于12:00AM,
+假设C3提交于9:00AM, C5提交于10:00AM, C4提交于11:00AM，C6提交于12:00AM,
 
 对于使用git merge来合并所看到的commit的顺序（从新到旧）是：C7 ,C6,C4,C5,C3,C2,C1
 
 对于使用git rebase来合并所看到的commit的顺序（从新到旧）是：C7 ,C6‘,C5',C4,C3,C2,C1
 
 因为C6'提交只是C6提交的克隆，C5'提交只是C5提交的克隆，从用户的角度看使用git rebase来合并后所看到的commit的顺序（从新到旧）是：C7 ,C6,C5,C4,C3,C2,C1
+
+# 参考
+
+https://blog.csdn.net/u010312474/article/details/89566787 (none)
