--- Auto-Git Commit ---

--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -16,7 +16,14 @@ git merge feature
 ![config](images/3.gif)
 
 
-同样 `git rebase feature`，也是把 feature 分支**合并到当前分支**
+同样 `git rebase feature`，也是把 feature 分支**合并到当前分支**. 提交会被移除，并且feature分支被重置到master分支，feature分支上的提交被重新应用到master。差别在于这些重新应用的提交通常是原始的副本，它们的 SHA-1 值和原来的提交不一样。
+
+![config](images/4.gif)
+
+我们现在将 feature 的基础提交从 b 变为了 c，这就是 rebase 的意思。将 feature 合并到 master 是一个快进合并，因为在 feature 上的所有提交都是 master 的直接子代。
+
+
+
 
 # 原理
 
