--- Auto-Git Commit ---

--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -6,6 +6,8 @@
 
 # 操作
 
+merge 的案例：
+
 git merge是用来合并两个分支的。
 
 ```
@@ -18,11 +20,17 @@ git merge feature
 
 同样 `git rebase feature`，也是把 feature 分支**合并到当前分支**. 提交会被移除，并且feature分支被重置到master分支，feature分支上的提交被重新应用到master。差别在于这些重新应用的提交通常是原始的副本，它们的 SHA-1 值和原来的提交不一样。
 
+rebase 的案例：
+
 ![config](images/4.gif)
 
 我们现在将 feature 的基础提交从 b 变为了 c，这就是 rebase 的意思。将 feature 合并到 master 是一个快进合并，因为在 feature 上的所有提交都是 master 的直接子代。
 
+快进合并的案例：
 
+![config](images/5.gif)
+
+和 merge 的方法比较起来，rebase 导致分支的历史都是线性的。我以前更喜欢在合并之前 rebase 分支的原因在于提高了可读性，我认为其他的开发者应该也是这种情况。
 
 
 # 原理
