--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
@@ -111,11 +111,11 @@ cat /sys/module/kvm_intel/parameters/preemption_timer
 
 Preemption Timer在VMCS中有三个域需要设置：
 
-- `Pin-Based VM-Execution Controls，Bit 6，“Activate VMX preemption timer”`： 该位如果设置为1，则打开Preemption Timer；如果为0，则下面两个域的设置均无效。该位在Kernel代码中对应的宏为`PIN_BASED_VMX_PREEMPTION_TIMER`。
+- `Pin-Based VM-Execution Controls，Bit 6，“Activate VMX preemption timer”`： 该位如果设置为1，则**打开Preemption Timer**；如果为0，则下面两个域的设置均无效。该位在Kernel代码中对应的宏为`PIN_BASED_VMX_PREEMPTION_TIMER`。
 
 - `VM-Exit Controls，Bit 22，"Save VMX preemption timer value"`： 如果该位设置为**1**，则在**每次VMEXIT**的时候都会将**已经消耗过的value**存在**VMCS**中；如果设置为**0**，则在每次VMEXIT之后，`Preemption Value`都会被设置成**初始值**。该位在Kernel代码中对应的宏为`VM_EXIT_SAVE_VMX_PREEMPTION_TIMER`。
 
-- `VMX-preemption timer value`：这个域是**VMCS中的一个域**，存储Preemption Value。这是一个32bit的域，设置的值是每次VMENTER时的值，在**VM运行的过程**中逐渐减少。如果设置了`Save VMX preemption timer value`，那么在退出时会**更新该域为新的值**，可以根据**两次的差**来计算**虚拟机运行**的**多少个TSC cycle**。在Kernel对用的宏为`VMX_PREEMPTION_TIMER_VALUE`。
+- `VMX-preemption timer value`：这个域是**VMCS中的一个域**，存储Preemption Value。这是一个32bit的域，设置的值是**每次VMENTER**时的值，在**VM运行的过程**中逐渐减少。如果设置了`Save VMX preemption timer value`，那么在退出时会**更新该域为新的值**，可以根据**两次的差**来计算**虚拟机运行**的**多少个TSC cycle**。在Kernel对用的宏为`VMX_PREEMPTION_TIMER_VALUE`。
 
 和Preemption Timer相关的文档参见Intel Manual，以及全文搜索"Preemption Timer"得到的相关内容。
 
