--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/0. 概述.md
@@ -10,10 +10,8 @@ VMM通过下面的设置进行拦截。
 
 - **SMI**, 通过“SMM双重监控处理机制”切人到STM (SMM-transfer monitor) 端进行处理。
 
-- NMI,通过将pin-based VM-execution control字段“NMI exiting" 位置1。
+- **NMI**, 通过将`pin-based VM-execution control`字段“`NMI exiting`" 位**置1**。
 
-VMM拦截这些事件后，可以直接反射给guest执行，或者根据情况做相应地虚拟化处理后反射虚拟化结果给guest. 另外，当在VM内发生INIT、SMI及SIPI 事件而不被阻塞时，将直接产生VM-exit (参见5.3 节和4.17.2节)。
+VMM拦截这些事件后，可以**直接反射给guest执行**，或者根据情况做相应地**虚拟化处理**后反射虚拟化**结果给guest**. 
 
-7.1异常处理
-
-业oneset在运行过程中可能会遇到某些错误引发异常，面由于该异常向量号在
+另外，当在VM内发生**INIT**、**SMI**及**SIPI 事件**而**不被阻塞**时，将直接产生`VM-exit`(参见5.3 节和4.17.2节)。
