--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -1,10 +1,8 @@
 
 
-当guest在运行过程中可能会遇到某些错误引发异常，面由于该异常向量号在exception bitmap字段中对应的位为 1 而导致 vm-exit .
+当guest在运行过程中可能会遇到**某些错误**引发**异常**，面由于该**异常向量号**在`exception bitmap`字段中**对应的位为1**而导致 `vm-exit` .
 
-
-
-如果这个异常不直接导致VM-exit, 也可能会在这个异常(或其他向量事件)的delivery期间遇到了另一个错误(包括异常、triple fault. 任务切换、EPT violation,EPT misconfiguration或者访问APIC-access page)而间接导致VM-exit。
+如果**这个异常不直接**导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的delivery期间遇到了另一个错误(包括异常、triple fault. 任务切换、EPT violation,EPT misconfiguration或者访问APIC-access page)而间接导致`VM-exit`。
 
 尽管VMM接管了这个异常(向量事件)的控制权，并且可以做某些处理，但是如果这个异常的发生是由于guest自身原因而导致，那么guest OS总是期望能得到对这个异常的最终处理。此时，VMM不应该忽略掉这个异常，而总是需要使用事件注人方式将异常交回guest进行处理，这样能保证guest OS正确的行为。
 
@@ -16,4 +14,4 @@
 
 .当异常是由于hostVM出于某些目的设置了某些条件或者VMM的错误设置而引发时，VMM根据自身设置的条件做相应处理，或者修正自身的错误设置后反射异常给guest处理，然后恢复guest的运行。
 
-例如，当guest产生PF异常面导致VM-exit时，如果#F异常是由于gust 0S并没有映射线性地址而产生，那么VMM不能插手处理，需要直接反射给gest处理。但是，
+例如，当guest产生PF异常面导致`VM-exit`时，如果#F异常是由于gust 0S并没有映射线性地址而产生，那么VMM不能插手处理，需要直接反射给gest处理。但是，
