--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -4,14 +4,34 @@
 
 如果**这个异常不直接**导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的delivery期间遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而间接导致`VM-exit`。
 
-尽管VMM接管了这个异常(向量事件)的控制权，并且可以做某些处理，但是如果这个异常的发生是由于guest自身原因而导致，那么guest OS总是期望能得到对这个异常的最终处理。此时，VMM不应该忽略掉这个异常，而总是需要使用事件注人方式将异常交回guest进行处理，这样能保证guest OS正确的行为。
+尽管VMM接管了这个异常(向量事件)的控制权，并且可以做某些处理，但是如果这个异常的发生是由于**guest自身原因**而导致，那么**guest OS**总是**期望**能得到对这个异常的**最终处理**。此时，VMM不应该忽略掉这个异常，而总是需要使用**事件注人方式**将异常交回guest进行处理，这样能保证guest OS正确的行为。
 
-因此，VMM对异常如何处理，取决于这个异常是否由于guest 自身原因而产生。
+因此，VMM对异常如何处理，取决于这个异常**是否由于guest 自身原因**而产生。
 
-|第7章 中断虚拟化I
+- 当异常是由于**guest自身条件**而引发时，VMM需要反射这个异常给guest处理，**VMM可以不做任何处理**。
 
-.当异常是由于guest自身条件而引发时，VMM需要反射这个异常给guest处理，VMM可以不做任何处理。
-
-.当异常是由于hostVM出于某些目的设置了某些条件或者VMM的错误设置而引发时，VMM根据自身设置的条件做相应处理，或者修正自身的错误设置后反射异常给guest处理，然后恢复guest的运行。
+- 当异常是由于host/VMM出于某些目的设置了某些条件或者VMM的错误设置而引发时，VMM根据自身设置的条件做相应处理，或者修正自身的错误设置后反射异常给guest处理，然后恢复guest的运行。
 
 例如，当guest产生PF异常面导致`VM-exit`时，如果#F异常是由于gust 0S并没有映射线性地址而产生，那么VMM不能插手处理，需要直接反射给gest处理。但是，
+
+如果这个线性地址是由于VMM的有意安排而产生#PF异常，那么VMM根据这个情况做些处理后无须反射给guest (参考7.2.2节的例子7-1)。
+
+又如，在异常delivery期间由于EPT misconfiguration而导致VM-exit时，VMM应该修复这个故障，然后注人这个原始异常事件(并不是直接引发VM-exit的异常)让guest恢复继续执行(即这个异常间接导致VM-exit)，
+
+然而有一个特殊的例子，在VMX non root operation模式里尝试进行任务切换将直接产生VM-exit。当guest运行在legacy 模式时，并不是guest的错误，也不是VMM本身的错误。因此，VMM必须要帮助guest来完成这个任务切换操作(参考7.1.3节例子7-2)。
+
+7.1.1 反射异常给guest
+
+由于异常而引发VM-exit时，VM- exit interruption information 字段将记录这个异常的delivery信息(参见3.10.2.1节)，并且有错误码时，在VM-exit interruption error code字段里记录异常的错误码。
+
+.般情况下， VMM可以直接将VM-exit interruption information字段的值复制给VM-entry interruption information字段，将VM-exit interuption error code字段的值复制给VM-entry nterruption error code字段(存在错误码时) .
+
+1.处理NMI unblocking位
+
+VM-entry iterruption information字段的bits 30:12属于保留位，在注人事件时必须清为0值。然而，VM-exit iterruption information 字段的bit 12为"NMI unbocking" 位。当这个异常是在执行IRET指令时引发并导致VM-exit, VM-exit itruption information字段的bit 12被置位。此时，VMM需要将复制到VM entry ineruption informatin 字段的bit12清0,否则将会产生VM-entry失败。
+
+因此，每次反射异常给guest时，VMM需要检查VM- exit interuption information 字段的bit 12.做出相应的处理。
+
+2.反射#DF异常
+
+当IDT-vectring information 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并不直接引发VM-exit. 而是由于在异常delivery 期间遇到某共情设而导政
