--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -10,11 +10,9 @@
 
 - 当异常是由于**guest自身条件**而引发时，VMM需要反射这个异常给guest处理，**VMM可以不做任何处理**。
 
-- 当异常是由于host/VMM出于某些目的设置了某些条件或者VMM的错误设置而引发时，VMM根据自身设置的条件做相应处理，或者修正自身的错误设置后反射异常给guest处理，然后恢复guest的运行。
+- 当异常是由于**host/VMM**出于某些目的设置了**某些条件**或者VMM的**错误设置**而引发时，VMM根据自身设置的条件做相应处理，或者修正自身的错误设置后反射异常给guest处理，然后恢复guest的运行。
 
-例如，当guest产生PF异常面导致`VM-exit`时，如果#F异常是由于gust 0S并没有映射线性地址而产生，那么VMM不能插手处理，需要直接反射给gest处理。但是，
-
-如果这个线性地址是由于VMM的有意安排而产生#PF异常，那么VMM根据这个情况做些处理后无须反射给guest (参考7.2.2节的例子7-1)。
+例如，当guest产生`#PF`异常而导致`VM-exit`时，如果`#PF异常`是由于**gust 0S**并**没有映射线性地址**而产生，那么**VMM不能插手处理**，需要**直接反射给gest处理**。但是，如果**这个线性地址**是由于VMM的有意安排而产生`#PF`异常，那么VMM根据这个情况做些处理后无须反射给guest (参考7.2.2节的例子7-1)。
 
 又如，在异常delivery期间由于EPT misconfiguration而导致VM-exit时，VMM应该修复这个故障，然后注人这个原始异常事件(并不是直接引发VM-exit的异常)让guest恢复继续执行(即这个异常间接导致VM-exit)，
 
