--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -14,22 +14,6 @@
 
 例如，当guest产生`#PF`异常而导致`VM-exit`时，如果`#PF异常`是由于**gust 0S**并**没有映射线性地址**而产生，那么**VMM不能插手处理**，需要**直接反射给gest处理**。但是，如果**这个线性地址**是由于VMM的有意安排而产生`#PF`异常，那么VMM根据这个情况做些处理后无须反射给guest (参考7.2.2节的例子7-1)。
 
-又如，在异常delivery期间由于EPT misconfiguration而导致VM-exit时，VMM应该修复这个故障，然后注人这个原始异常事件(并不是直接引发VM-exit的异常)让guest恢复继续执行(即这个异常间接导致VM-exit)，
+又如，在**异常delivery期间**由于`EPT misconfiguration`而导致`VM-exit`时，VMM应该**修复这个故障**，然后**注人这个原始异常事件**(并不是直接引发`VM-exit`的异常)让guest恢复继续执行(即这个异常间接导致VM-exit)，
 
-然而有一个特殊的例子，在VMX non root operation模式里尝试进行任务切换将直接产生VM-exit。当guest运行在legacy 模式时，并不是guest的错误，也不是VMM本身的错误。因此，VMM必须要帮助guest来完成这个任务切换操作(参考7.1.3节例子7-2)。
-
-7.1.1 反射异常给guest
-
-由于异常而引发VM-exit时，VM- exit interruption information 字段将记录这个异常的delivery信息(参见3.10.2.1节)，并且有错误码时，在VM-exit interruption error code字段里记录异常的错误码。
-
-.般情况下， VMM可以直接将VM-exit interruption information字段的值复制给VM-entry interruption information字段，将VM-exit interuption error code字段的值复制给VM-entry nterruption error code字段(存在错误码时) .
-
-1.处理NMI unblocking位
-
-VM-entry iterruption information字段的bits 30:12属于保留位，在注人事件时必须清为0值。然而，VM-exit iterruption information 字段的bit 12为"NMI unbocking" 位。当这个异常是在执行IRET指令时引发并导致VM-exit, VM-exit itruption information字段的bit 12被置位。此时，VMM需要将复制到VM entry ineruption informatin 字段的bit12清0,否则将会产生VM-entry失败。
-
-因此，每次反射异常给guest时，VMM需要检查VM- exit interuption information 字段的bit 12.做出相应的处理。
-
-2.反射#DF异常
-
-当IDT-vectring information 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并不直接引发VM-exit. 而是由于在异常delivery 期间遇到某共情设而导政
+然而有一个特殊的例子，在VMX non root operation模式里尝试进行**任务切换**将直接产生VM-exit。当guest运行在 legacy 模式时，并不是guest的错误，也不是VMM本身的错误。因此，VMM必须要帮助guest来完成这个任务切换操作(参考7.1.3节例子7-2)。
