--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -14,6 +14,6 @@
 
 当IDT-vectring information 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并不直接引发VM-exit. 而是由于在异常delivery 期间遇到某些错误而导致`VM-exit`(参见3.10.3节). 那么 `IDT-vectoring information` 字段记录原始向量事件的delivery信息, `IDT-vectoring error code`字段记录原始异常的错误码.
 
-在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常给
+在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常给guest.
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
