--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -1,8 +1,8 @@
 
 
-当guest在运行过程中可能会遇到**某些错误**引发**异常**，面由于该**异常向量号**在`exception bitmap`字段中**对应的位为1**而导致 `vm-exit` .
+当guest在运行过程中可能会遇到**某些错误**引发**异常**，而由于该**异常向量号**在`exception bitmap`字段中**对应的位为1**而导致 `vm-exit` .
 
-如果**这个异常不直接**导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的delivery期间遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而间接导致`VM-exit`。
+如果**这个异常不直接**导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的**delivery期间**遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而**间接导致**`VM-exit`。
 
 尽管VMM接管了这个异常(向量事件)的控制权，并且可以做某些处理，但是如果这个异常的发生是由于**guest自身原因**而导致，那么**guest OS**总是**期望**能得到对这个异常的**最终处理**。此时，VMM不应该忽略掉这个异常，而总是需要使用**事件注人方式**将异常交回guest进行处理，这样能保证guest OS正确的行为。
 
