--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -6,14 +6,17 @@
 
 # 处理NMI unblocking位
 
-`VM-entry interruption information`字段的`bits 30:12`属于保留位，在注人事件时必须清为0值。然而，`VM-exit interruption information` 字段的`bit 12`为"`NMI unbocking`" 位。当这个异常是在执行IRET指令时引发并导致`VM-exit`, `VM-exit interruption information`字段的`bit 12`被置位。此时，VMM需要将复制到`VM entry ineruption informatin` 字段的`bit 12`清0,否则将会产生`VM-entry`失败。
+`VM-entry interruption information`字段的`bits 30:12`属于**保留位**，在注入事件时必须清为0值。
 
-因此，每次反射异常给guest时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
+然而，`VM-exit interruption information` 字段的`bit 12`为"`NMI unbocking`" 位。当这个异常是在执行**IRET指令**时引发并导致`VM-exit`, `VM-exit interruption information`字段的`bit 12`被置位。此时，VMM需要将复制到`VM entry ineruption informatin` 字段的`bit 12`清0, 否则将会产生`VM-entry`失败。
+
+因此，每次**反射异常给guest**时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
 
 # 反射`#DF`异常
 
-当IDT-vectring information 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并不直接引发VM-exit. 而是由于在异常delivery 期间遇到某些错误而导致`VM-exit`(参见3.10.3节). 那么 `IDT-vectoring information` 字段记录原始向量事件的delivery信息, `IDT-vectoring error code`字段记录原始异常的错误码.
+当 `IDT-vectring information` 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 那么 `IDT-vectoring information` 字段记录原始向量事件的delivery信息, `IDT-vectoring error code`字段记录原始异常的错误码.
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常给guest.
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
+
