--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -14,9 +14,33 @@
 
 # 反射`#DF`异常
 
-当 `IDT-vectring information` 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 那么 `IDT-vectoring information` 字段记录原始向量事件的delivery信息, `IDT-vectoring error code`字段记录原始异常的错误码.
+当 `IDT-vectring information` 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 
+
+那么 `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常给guest.
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
+
+......
+
+# 处理 triple fault
+
+下面的三种情况会产生**triple fault**(异常属于前面所说的第1类或者第2类情况):
+
+(1) 当 guest 遇到**异常**但并**不导致**`VM-exit`, 继而在这个**异常delivery期间**引发了**另一个异常**，这个异常也不导致VM-exit,从而这两个异常被转化为#DF异常。#DF异常也不导致VM-exit,继而在#DF异常的delivery期间再次引发了-一个异常，最终转化为triplefault而导致VM-exit。
+
+(2) VMM注入一个硬件异常，在这个注人异常的delivery 期间引发了一 个异常，这个异常并不导致VM-exit, 从而转化为#DF异常。#DF异常也不导致VM-exit, 继而在#DF异常的delivery期间再次引发了-一个异常，最终转化为triple fault而导致VM-exit。
+
+(3) VMM注人一个硬件异常#DF,在这个注人的#DF异常delivery 期间引发了一 一个异常，最终转化为triple fault而导致VM-exit。
+
+由triple fault 直接引发VM-exit时，VMM不应该注人任何事件给guest执行。VMM可以选择终止guest的运行，或者将VM置为shutdown状态。当VM处于shutdown状态时，NMI、SMI及INIT事件能唤醒shutdown状态转为active状态(参见4.17.3节)
+
+4. 直接反射异常
+
+当异常由guest 自身条件所引发时，在下面的情况下VMM可以直接反射异常给guest处理。
+
+(1)由异常直接导致VM-exit时， 也就是IDT-vectoring information字段bit31为0。
+
+525 )
